<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferences_general">
        <CheckBoxPreference
            android:key="general_start_zerotier_on_boot"
            android:title="@string/preferences_general_start_on_boot"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="network_auto_rejoin_networks"
            android:title="@string/preferences_network_auto_rejoin"
            android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_network">
        <CheckBoxPreference
            android:key="network_use_cellular_data"
            android:title="@string/preferences_network_use_cell_data"
            android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>